syntax = "proto3";

option go_package = "github.com/cpustejovsky/microservice/whitelist";

package whitelist;

service WhiteList {

  rpc CheckIPAddress(Input) returns (Output) {}

}
message Input {
  string IP = 1;
  repeated string WhiteList = 2;
}

message Output {
  bool WhiteListed = 1;
}